[gd_scene load_steps=4 format=3 uid="uid://brmnx1pbw61aa"]

[ext_resource type="Script" path="res://buildings/usine.gd" id="1_awu37"]
[ext_resource type="Texture2D" uid="uid://boyi6hivb0s4" path="res://sprites/sprite_usine.png" id="2_43qri"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uqf7m"]
radius = 47.1699

[node name="Usine" type="Node2D"]
script = ExtResource("1_awu37")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_43qri")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uqf7m")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
